--- a/WebApplication1/Client/Shared/Components/RigListComponent.razor
+++ b/WebApplication1/Client/Shared/Components/RigListComponent.razor
@@ -3,7 +3,7 @@
 <input @bind="name" @onfocusout="nekametoda" style="border:1px solid grey" />
 
 <div class="m-4 p-4 rounded-t-lg border-2 border-dashed">
-    <div class="grid grid-cols-4 gap-4">
+    <div class="grid grid-cols-4 2xl:grid-cols-6 gap-4">
         @foreach (var item in minerList)
         {
             <RigComponent/>
