--- a/WebApplication1/Client/Shared/Components/RigListComponent.razor
+++ b/WebApplication1/Client/Shared/Components/RigListComponent.razor
@@ -6,7 +6,7 @@
     <div class="grid grid-cols-4 2xl:grid-cols-6 gap-4">
         @foreach (var item in minerList)
         {
-            <RigComponent/>
+            <RigComponent name="@item"/>
         }
     </div>
 </div>
